# agent-stack

./: .env.example  .git-commit-template.txt  .gitignore  CURRENT_SESSION_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_REVISED.md  MILESTONE_2_PLAN.md  MILESTONE_STATUS.md  QUICKSTART.md  README.md  START_HERE.md  TASKS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: hybrid-retrieval-design.md
src/: main.py
src/agent/: __init__.py  rag_flow.py  research_flow.py
src/api/: dependencies.py  models.py  services.py
src/api/routes/: auth.py  chat.py  documents.py  health.py
src/auth/: jwt.py  password.py
src/config/: providers.py  settings.py
src/db/: crud.py  database.py  models.py
src/providers/: anthropic_provider.py  base.py  factory.py  openai_provider.py
src/rag/: chunker.py  citations.py  loader.py  models.py  retriever.py  store.py
src/research/: citations.py  planner.py
src/tools/: base.py  web_search.py
tests/: conftest.py
tests/contract/: test_tavily.py
tests/fixtures/documents/: doc1.md  doc2.md  doc3.txt
tests/integration/: test_api_auth.py  test_rag_flow.py  test_research_flow.py
tests/live/: test_tavily_live.py
tests/unit/: test_auth.py  test_chunker.py  test_citations.py  test_config.py  test_db.py  test_loader.py  test_mixed_citations.py  test_planner.py  test_providers.py  test_retriever.py  test_store.py  test_web_search.py
